Fixed double agent not showing in footer

--- a/public/_assets/listing-commands/css/marketing-steps-lc1.css
+++ b/public/_assets/listing-commands/css/marketing-steps-lc1.css
@@ -56,6 +56,9 @@ body{
 .company-logo{
 	min-height: 8.438rem;
 }
+.company-logo:empty {
+    min-height: 4.0625rem;
+}
 .company-logo img{
 	width: 15.625rem;
 }
